my commit message

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <style> body { margin: 0 }</style>
-"<body><script src="bundle.js"></script></bundle>"
+<body><script src="bundle.js"></script></bundle>
